# biodivine-pbn-control

./: .gitignore  Cargo.toml  README.md  benchmark_results.csv  mapk_1.aeon  mapk_2.aeon  mapk_3.aeon  mapk_4.aeon  mapk_4_result.txt  mapk_4_result_2.txt  mapk_5.aeon  mapk_5_result.txt  mapk_5_result_2.txt  mapk_6.aeon  mapk_7.aeon  network_sampler.py  run_phenotype.py  run_phenotype_scalability.py  run_phenotype_uncertain.py
auxiliary_scripts/: network_sampler.py  plot_results.ipynb  run_groups.py
benchmark_creation/: analyse_results.py
models/: 4vars_test.aeon  PhaseSwitch.sbml  SmallTest.sbml  TLGL_Large_Fixed_Inputs.sbml  TLGL_Small.sbml  ThNetwork.sbml  cardiac_4unknown.aeon  cardiac_witness.aeon  cell_fate_2unknown.aeon  cell_fate_4unknown.aeon  cell_fate_witness.aeon  erbb_4unknown.aeon  g2b.aeon  hgf_4unknown.aeon  hgf_witness.aeon  mapk_4unknown.aeon  mapk_witness.aeon  myeloid_11unkonwn.aeon  myeloid_2unkonwn.aeon  myeloid_4unknown.aeon  small_mapk.aeon  tumour_1unknown.aeon  tumour_2unknown.aeon  tumour_3unknown.aeon  tumour_4unknown.aeon  tumour_5unknown.aeon  tumour_6unknown.aeon  tumour_witness.aeon
models_phenotype/: [id-014]__[var-54]__[in-7]__[T-LGL-SURVIVAL-NETWORK-2008].aeon  [id-065]__[var-30]__[in-2]__[TUMOUR-CELL-INVASION-AND-MIGRATION].aeon  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE]_uncertain.aeon  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE]_uncertain_DUSP1_reg.aeon  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE]_uncertain_FRS2.aeon  [id-070]__[var-49]__[in-4]__[MAPK-CANCER-CELL-FATE]_uncertain_MEK1_2.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1].aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__LOF__PTEN_p14.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__LOF__p53.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__egfr_oe_witness_0000.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__fgfr3_oe_witness_0000.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_AKT.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_AKT_0000.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_AKT_FRS2.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_AKT_FRS2_0000.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_FRS2.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__unknown_FRS2_0000.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__witness.aeon  [id-089]__[var-13]__[in-4]__[MAPK-REDUCED-1]__witness_0000.aeon  [id-150]__[var-31]__[in-2]__[CELL-FATE-DECISION-MULTISCALE].aeon  benchmark.json  benchmark_one_phenotype.json  mapk_loss_of_function.aeon  perturbed_reduced_mapk.aeon
plot_results/: cardiac.csv  erbb.csv  myeloid.csv  plots.ipynb  tumour.csv
results/: cardiac.csv  mapk.csv  myeloid.csv  results-performance2.txt  results_colours_scalability.txt  results_performance.txt  results_robustness.txt
results_simple/: cell_fate_naive.txt  cell_fate_necrosis.txt  erbb_non_phosporilation.txt  full_mapk_apoptosis.txt  full_mapk_proliferation.txt  full_mapk_uncertain_apoptosis.txt  full_mapk_uncertain_no_decision.txt  mapk_loss_apoptosis.txt  reduced_mapk_growth_arrest.txt  tumour_apoptosis.txt  (+4 more)
(+110 files in other folders)
