[package]
name = "biodivine-pbn-control"
version = "0.2.0"
description = "A library for controlling parametrized Boolean networks."
authors = ["Samuel Pastva <daemontus@gmail.com>, Eva Smijakova <smijakova.eva@gmail.com>"]
edition = "2021"
license = "MIT"
exclude = [
    "auxiliary_scripts/*",
    "models/*",
    "results/*"
]

[features]
# For releases, we want to include Z3 statically, so that users
# don't have to install it (or break compatibility with new versions).
# So for CI builds, this feature is enabled, but for local builds,
# you don't need it as long as you have Z3 installed (because your
# build may take >30min if you enable it).
static-z3 = ["z3/static-link-z3"]
print_progress = []


[dependencies]
rayon = "1.3.0"
clap = "4.0.26"
serde_json = "1.0.59"
itertools = "0.10.1"
chrono = "0.4.19"
biodivine-lib-bdd = "0.5.1"
biodivine-lib-param-bn = { version="0.4.5", features=["solver-z3"] }
rstest = "0.17.0"

z3="^0.11.2"
z3-sys = "^0.7.1"

[dev-dependencies]


# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./res/docs-head.html"]
