[package]
name = "biodivine-pbn-control"
version = "0.3.1"
description = "A library for controlling parametrized Boolean networks."
authors = ["Samuel Pastva <sam.pastva@gmail.com>, Eva Smijakova <smijakova.eva@gmail.com>"]
edition = "2021"
license = "MIT"
exclude = [
    "auxiliary_scripts/*",
    "models/*",
    "results/*"
]

[dependencies]
rayon = "1.8.0"
clap = "4.4.11"
serde_json = "1.0.108"
itertools = "0.12.0"
chrono = "0.4.31"
biodivine-lib-bdd = ">=0.5.7"
biodivine-lib-param-bn = ">=0.5.1, <1.0.0"
rstest = "0.18.2"

[dev-dependencies]

[features]
print_progress = []

# Enable rich docs for some online docs autogen services.
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "./res/docs-head.html"]
